--- a/acce/style.css
+++ b/acce/style.css
@@ -9,21 +9,21 @@ h1,h2,h3,h4,h5,h6{
     text-align: center;
 }
 p{
-    font-size: 30px;
+    font-size: 1.7em;
     text-align: justify;
 }
 .doc{
     display: flex;
     margin: 10px auto;
-    width: 65%;
+    width: 64%;
     flex-wrap: wrap;
 }
 .tasks{
     background: white;
     margin:30px;
     padding: 20px 10px;
-    width: 300px;
-    height: 350px;
+    width: 20em;
+    height: 23em;
     border-radius: 10px;
     display:flex;
     flex-direction: column;
