--- a/laba1/acce/style.css
+++ b/laba1/acce/style.css
@@ -17,9 +17,9 @@ header {
     margin: 0 0 100px 0;
 }
 
-header>h3 {
+header > h3 {
     margin-left: 15em;
-    font-size: 2.5em
+    font-size: 2.5em;
 }
 
 .main {
@@ -41,14 +41,15 @@ main {
     margin: 50px 0 50px 0;
     font-size: 50px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.stroka>li>a {
+.stroka > li > a {
     margin: 0 20px 0 0;
     text-decoration: none;
 }
-.v ul{  
+.v ul {
     display: block;
 }
 li {
@@ -61,36 +62,36 @@ li {
     border-top: 2px solid black;
 }
 
-.form{
+.form {
     margin: 0 10em 0 0;
 }
-.form  input{
+.form input {
     width: 100%;
     height: 2.5em;
-    margin: .3em 0;
-    padding: 0 .3em;
+    margin: 0.3em 0;
+    padding: 0 0.3em;
     border: none;
     border-radius: 5px;
     background: #d4d4d4;
 }
-.form input[type="submit"]{
+.form input[type="submit"] {
     border: none;
     background: #00c500;
     border-radius: 5px;
     font-size: 1.2em;
     box-shadow: 7px 6px 10px black;
 }
-.form input[type="submit"]:active{
+.form input[type="submit"]:active {
     box-shadow: 3px 3px 4px black;
     transform: translateY(3px);
 }
-.form p{
+.form p {
     font-size: 1.2em;
 }
-.logout{
+.logout {
     margin: 0 10em 0 0;
 }
-.logout input[type="submit"]{
+.logout input[type="submit"] {
     border: none;
     background: #cf0202;
     width: 7em;
@@ -99,10 +100,35 @@ li {
     font-size: 1.2em;
     box-shadow: 7px 6px 10px black;
 }
-.logout input[type="submit"]:active{
+.logout input[type="submit"]:active {
     box-shadow: 3px 3px 4px black;
     transform: translateY(3px);
 }
 footer {
     flex: 0 0;
+}
+
+.oops {
+    position: absolute;
+    height: 10em;
+    opacity: 1;
+    animation: op linear 2s;
+}
+.oopss {
+    position: absolute;
+}
+.left {
+    margin: -1em 0 0 -3.5em;
+}
+.ritgh{
+    margin: -1.25em 0 0 3.5em;
+}
+@keyframes op {
+    from {height: 0;opacity: 0;}
+    5% {height: 5%;}
+    15% {height: 15%;}
+    25% {height: 25%;}
+    35% {height: 35%;}
+    45% {height: 45%;}
+    55% {height: 55%;opacity: 1;}
 }
